WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
253357
Unreviewed, just suppress exception warning
https://bugs.webkit.org/show_bug.cgi?id=253357
Summary
Unreviewed, just suppress exception warning
Yusuke Suzuki
Reported
2023-03-03 16:18:21 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-03-03 16:18:36 PST
<
rdar://problem/106217064
>
Yusuke Suzuki
Comment 2
2023-03-03 16:19:07 PST
Pull request:
https://github.com/WebKit/WebKit/pull/11039
EWS
Comment 3
2023-03-03 16:26:46 PST
Committed
261179@main
(81acad86697a): <
https://commits.webkit.org/261179@main
> Reviewed commits have been landed. Closing PR #11039 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug