Unreviewed, just suppress exception warning https://bugs.webkit.org/show_bug.cgi?id=253357 rdar://106217064

* Source/JavaScriptCore/interpreter/Interpreter.cpp:
(JSC::Interpreter::executeBoundCall):

Canonical link: https://commits.webkit.org/261179@main